@@ -1,5 +1,6 @@
 Changes for 1.4.3:
 
+ - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
  - [ZBX-30,ZBX-47] better dependencies (Alexei)
  - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
  - [ZBX-95] fixed patch.sql to work with buggy PHPMyAdmin (Alexei)
